// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0


syntax = "proto3";

package connectors;
option java_package = "com.datmesh";
option go_package = "github.com/ibm/the-mesh-for-data/pkg/connectors/protobuf";

message CatalogDatasetRequest {
    string app_id = 1;                // string that identifies the application (namespace + appID) that will be used against secretProvider to obtain the realted credetnials
    string dataset_id = 2;           // identifier of asset - always needed. JSON expected. Interpreted by the Connector, can contain any additional information as part of JSON
}
